--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 attrs==21.4.0
 black==22.3.0
 click==8.1.2
+colorama==0.4.4
+docopt==0.6.2
 iniconfig==1.1.1
 mypy-extensions==0.4.3
 packaging==21.3
@@ -10,5 +12,9 @@ pluggy==1.0.0
 py==1.11.0
 pyparsing==3.0.7
 pytest==7.1.1
+pytest-sugar==0.9.4
+pytest-watch==4.2.0
+termcolor==1.1.0
 tomli==2.0.1
 typing_extensions==4.1.1
+watchdog==2.1.7
