--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ click==8.1.2
 colorama==0.4.4
 docopt==0.6.2
 iniconfig==1.1.1
+mypy==0.942
 mypy-extensions==0.4.3
 packaging==21.3
 pathspec==0.9.0
