--- a/.github/workflows/run_tests.yaml
+++ b/.github/workflows/run_tests.yaml
@@ -40,5 +40,5 @@ jobs:
           pip install -e .
 
       - name: Run unit tests
-        run: python -m pytest --import-mode=append
+        run: python -m pytest --import-mode=append --verbose
           
